@@ -802,6 +802,8 @@ class LuaContext {
       entity_api_get_position,
       entity_api_set_position,
       entity_api_get_center_position,
+      entity_api_get_ground_position,
+      entity_api_get_ground_below,
       entity_api_get_bounding_box,
       entity_api_get_max_bounding_box,
       entity_api_overlaps,
