@@ -31,6 +31,7 @@ set(lua_test_maps
   "bugs/818_sprite_get_num_frames"
   "bugs/821_hero_start_attack"
   "bugs/823_sprite_get_size_origin"
+  "bugs/830_entity_get_ground_position"
 )
 
 # Build the Solarus testing library.
