@@ -27,6 +27,7 @@ map{ id = "bugs/817_entity_set_enabled_overlapping_hero", description = "#817: e
 map{ id = "bugs/818_sprite_get_num_frames", description = "#818: sprite:get_num_frames()" }
 map{ id = "bugs/821_hero_start_attack", description = "#821: hero:start_attack()" }
 map{ id = "bugs/823_sprite_get_size_origin", description = "#823: sprite:get_size() and sprite:get_origin()" }
+map{ id = "bugs/830_entity_get_ground_position", description = "#830: entity:get_ground_position() and entity:get_ground_below()" }
 map{ id = "dynamic_tile_tests", description = "Dynamic tile tests" }
 map{ id = "jumper_tests", description = "Jumper tests" }
 map{ id = "surface_tests", description = "Surface tests" }
